--- a/templates/log-in-form.html
+++ b/templates/log-in-form.html
@@ -1,3 +1,5 @@
+<script src="../libs/jquery-2.1.4.js"></script>
+<script src="../js/validation.js"></script>
 <form id="login_form" action="#" method="post" accept-encoding="UTF-8">
 	<p>Enter your <strong>email address</strong> and <strong>password</strong>.</p>
 	<input type="email" id="email" name="email" size="40" value="" placeholder="you@domain.com" /><br /> <br />
