--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,10 @@
 <head>
 	<title>bawl</title>
 	<link rel="stylesheet" type="text/css" href="../styles/styles.css">
+	<script src="../js/libs/jquery/jquery-2.1.4.min.js"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
+	<script src="../js/libs/gmaps/markerclusterer.js"></script>
+	<script src="../js/main.js"></script>
 </head>
 <body>
 	<header>
@@ -11,8 +15,7 @@
 		<div id="login-button" class="header-elements"><span>Login</span></div>		
 	</header>
 	<div id="main-container">
-		
+		<div id="map-canvas"></div>
 	</div>
-
 </body>
 </html>
