added project folders started less for login form moved validatiion.js file

--- a/templates/log-in-form.html
+++ b/templates/log-in-form.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Login form</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/form.css">
     </head>
 <body>
-    <div style="margin-left:10px;  width:500px;">
+    <div class="form-wrapper">
     <form id="login_form" action="#" method="post" accept-encoding="UTF-8">
 	<p>Enter your <strong>email address</strong> and <strong>password</strong>.</p>
 	<div class="form-group">
@@ -28,7 +28,7 @@
     </form>
     </div>
     <script src="../libs/jquery-2.1.4.js"></script>
-    <script src="../js/validation.js"></script>
+    <script src="../js/apps/validation.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </body>
