--- a/less/form.less
+++ b/less/form.less
@@ -1,4 +1,29 @@
+@color-for-border:#489a37;
 .form-wrapper{
-width:500px;
-margin-left:10px;
+width: 260px;
+margin-left: 10px;
+font-size:12px;
+
+input{
+width: 180px;
+float:right;
+margin-left:5px;
+padding-left: 5px;
+}
+label{
+font-size:12px;
+font-weight: normal;
+}
+input[type=checkbox]{
+margin-left: -100px;
+}
+#login_btn{
+margin-left: 79px;
+border-radius: 0;
+font-size:12px;
+border-color:@color-for-border;
+}
+.login-form-bottom{
+margin-left: 79px;
+}
 }
