--- a/styles/form.css
+++ b/styles/form.css
@@ -1,4 +1,27 @@
 .form-wrapper {
-  width: 500px;
+  width: 260px;
   margin-left: 10px;
+  font-size: 12px;
+}
+.form-wrapper input {
+  width: 180px;
+  float: right;
+  margin-left: 5px;
+  padding-left: 5px;
+}
+.form-wrapper label {
+  font-size: 12px;
+  font-weight: normal;
+}
+.form-wrapper input[type=checkbox] {
+  margin-left: -100px;
+}
+.form-wrapper #login_btn {
+  margin-left: 79px;
+  border-radius: 0;
+  font-size: 12px;
+  border-color: #489a37;
+}
+.form-wrapper .login-form-bottom {
+  margin-left: 79px;
 }
