--- a/templates/log-in-form.html
+++ b/templates/log-in-form.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Login form</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../js/libs/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="../styles/form.css">
     </head>
 <body>
@@ -13,23 +13,22 @@
     <form id="login_form" action="#" method="post" accept-encoding="UTF-8">
 	<p>Enter your <strong>email address</strong> and <strong>password</strong>.</p>
 	<div class="form-group">
-	<label for="email">Email address</label>
-	<input type="email" id="email" name="email" size="40" class="form-control" placeholder="you@domain.com"/>
+	<label for="email">Email</label>
+	<input type="email" id="email" name="email" size="40" placeholder="you@domain.com"/>
 	</div>
 	<div class="form-group">
 	<label for="password">Password</label>
-	<input type="password" id="password" name="password" size="40" class="form-control" placeholder="password"/> 
+	<input type="password" id="password" name="password" size="40"  placeholder="password"/> 
 	</div>
 	<button id="login_btn" type="submit" class="btn btn-default">Login</button>
 	<div class="checkbox">
 	<label><input type="checkbox" name="remember" checked /> Keep me signed in</label>
-	</div>
+    </div>
 	<p><a href="#">I forgot my password</a></p>				
     </form>
-    </div>
-    <script src="../libs/jquery-2.1.4.js"></script>
+	</div>
+    <script src="../js/libs/jquery/jquery-2.1.4.js"></script>
     <script src="../js/apps/validation.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <script src="../js/libs/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
