--- a/templates/signform.html
+++ b/templates/signform.html
@@ -4,24 +4,23 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!--Social button-->
-  <meta name="google-signin-client_id"
-   content="118922838722-t3n5vbl6hk8tsgqeg1kd4krop0hk42gj.apps.googleusercontent.com">
-  <link rel="stylesheet" href="../styles/social-networks.css">
   
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="../css/bootstrap/css/bootstrap.min.css">
+  <!-- Latest compiled and minified CSS bootstrap -->
+  <link rel="stylesheet" href="../js/libs/bootstrap/css/bootstrap.min.css">
 
 <!-- Optional theme -->
-  <link rel="stylesheet" href="../css/bootstrap/css/bootstrap-theme.min.css">
+<link rel="stylesheet" href="../js/libs/bootstrap/css/bootstrap-theme.min.css">
+<link href="../libs/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
-<!-- Latest compiled and minified JavaScript -->
-<!--
-  <script src="../css/bootstrap/js/bootstrap.min.js"></script>
-  <script src="https://apis.google.com/js/platform.js" async defer></script>
-  <script src="../js/apps/social-networks-buttons.js"></script>-->
+<!--JQuery-->
+<script src="../libs/jquery-2.1.4.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <link rel="stylesheet" href="../css/style.css">
+<!--Script for Image Avatar-->
+<script src="../libs/jquery-2.1.4.js"></script>
+<script src="../js/apps/signform.js"></script>
+
+<!--Styles-->
+<link rel="stylesheet" href="../styles/signform.css">
 </head>
 <body>
   <br>
@@ -29,75 +28,78 @@
     <form class="form-horizontal" role="form">
       <div class="row">
           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12  form-group">
-              <label class=".control-label col-sm-4 col-xs-12" for="name">User Name</label>
-              <div class="col-sm-8  col-xs-12">
-                <input type="text" class="form-control input-sm" id="name">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+              <label class="control-label col-lg-4 col-md-4 col-sm-4 col-xs-4" for="name">User Name</label>
+              <div class="col-lg-8 col-md-8 col-sm-8  col-xs-8">
+                <input type="text" class="res form-control input-sm" id="name">
               </div>
               <br>
               <br>
-              <label class=".control-label col-sm-4 col-xs-12" for="login">Login</label>
-              <div class="col-sm-8  col-xs-12">
-                <input type="text" class="form-control input-sm" id="login">
+              <label class="control-label col-lg-4 col-md-4 col-sm-4 col-xs-4" for="login">Login</label>
+              <div class="col-lg-8 col-md-8 col-sm-8  col-xs-8">
+                <input type="text" class="res form-control input-sm" id="login">
               </div>
               <br>
               <br>
-              <label class=".control-label col-sm-4 col-xs-12" for="email">E-mail</label>
-              <div class="col-sm-8  col-xs-12">
-                <input type="text" class="form-control input-sm" id="email">
+              <label class="control-label control-label col-lg-4 col-md-4 col-sm-4 col-xs-4" for="email">E-mail</label>
+              <div class="col-lg-8 col-md-8 col-sm-8  col-xs-8">
+                <input type="text" class="res form-control input-sm" id="email">
               </div>
               <br>
               <br>
-              <label class=".control-label col-sm-4 col-xs-12" for="pass">Password</label>
-              <div class="col-sm-8  col-xs-12">
-                <input type="text" class="form-control input-sm" id="pass">
+              <label class="control-label control-label col-lg-4 col-md-4 col-sm-4 col-xs-4" for="pass">Password</label>
+              <div class="col-lg-8 col-md-8 col-sm-8  col-xs-8">
+                <input type="text" class="res form-control input-sm" id="pass">
               </div>
               <br>
               <br>
-              <label class=".control-label col-sm-4 col-xs-12" for="confpass">Confirm password</label>
-              <div class="col-sm-8  col-xs-12">
-                <input type="text" class="form-control input-sm" id="confpass">
+              <label class="control-label control-label col-lg-4 col-md-4 col-sm-4 col-xs-4" for="confpass">Confirm password</label>
+              <div class="col-lg-8 col-md-8 col-sm-8  col-xs-8">
+                <input type="text" class="res form-control input-sm" id="confpass">
               </div>
+            </div>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12  form-group">
-              
-              <label class="control-label col-xs-4 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-md-4 col-md-offset-1 col-lg-4 col-lg-offset-1" for="photo">Yours Photo </label>
-              <!--col-xs-3 col-xs-offset-2 col-sm-3 col-sm-offset-5 col-md-3 col-md-offset-5 col-lg-3 col-lg-offset-5-->
-              <div class="image-upload col-xs-4 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-md-4 col-md-offset-1 col-lg-4 col-lg-offset-1 ">
-                  <label for="imgInp">
-                    <div id="over">
-                      <img id="blah" src="anonymus.png"/>
-                    </div>
-                   </label>
-                   <input id="imgInp" type="file" id="photo"/>
+              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <label class="control-label col-lg-4 col-md-4 col-sm-4 col-xs-4" for="photo">Yours Photo </label>
+                <div class="image-upload col-lg-8 col-md-8 col-sm-8  col-xs-8 ">
+                    <label for="imgInp">
+                      <div id="over">
+                        <img id="blah" src="../img/anonymus.png"/>
+                      </div>
+                     </label>
+                     <input id="imgInp" type="file" id="photo"/>
+                </div>
               </div>
+              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="height:14px"></div><!--Use for <br> -->
+              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <label class="control-label col-lg-4 col-md-4 col-sm-4 col-xs-4" for="photo">Use Social Account </label>
+                <div class="image-upload col-lg-8 col-md-8 col-sm-8  col-xs-8 ">
+                  <ul class="list-inline social-buttons">
+                    <li>
+                      <a href="#">
+                        <i class="fa fa-facebook"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <i class="fa fa-google"></i>
+                      </a>
+                    </li>
+                  </ul>
+                </div>  
+              </div>   
           </div>
           <div class="col-md-12 col-sm-12 col-xs-12">
-            <div class="col-xs-4 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-md-4 col-md-offset-1 col-lg-4 col-lg-offset-1 ">
-              <input type="submit" class="form-control btn-danger">
+            <div class="col-xs-5 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-md-4 col-md-offset-1 col-lg-4 col-lg-offset-1 ">
+              <input type="submit" class="butconf btn-danger" value="Sign Up">
             </div>
-            <div class="col-xs-4 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-md-4 col-md-offset-1 col-lg-4 col-lg-offset-1 ">
-              <input type="button" class="form-control btn-danger " value="Cancel">
+            <div class="col-xs-5 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-md-4 col-md-offset-1 col-lg-4 col-lg-offset-1 ">
+              <input type="button" id="but" class="butconf  btn-danger " value="Cancel">
             </div>
           </div>
       </div>
     </form>
   </div>
 </body>
-<script>
-function readURL(input) {
 
-    if (input.files && input.files[0]) {
-        var reader = new FileReader();
-
-        reader.onload = function (e) {
-            $('#blah').attr('src', e.target.result);
-        }
-
-        reader.readAsDataURL(input.files[0]);
-    }
-}
-
-$("#imgInp").change(function(){
-    readURL(this);
-});
-</script>
