Change colors of social and Submit Changes button like header color

--- a/templates/signform.html
+++ b/templates/signform.html
@@ -92,10 +92,10 @@
           </div>
           <div class="col-md-12 col-sm-12 col-xs-12">
             <div class="col-xs-5 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-md-4 col-md-offset-1 col-lg-4 col-lg-offset-1 ">
-              <input type="submit" class="butconf btn-danger" value="Sign Up">
+              <input type="submit" class="butconf" value="Sign Up">
             </div>
             <div class="col-xs-5 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-md-4 col-md-offset-1 col-lg-4 col-lg-offset-1 ">
-              <input type="button" id="but" class="butconf  btn-danger " value="Cancel">
+              <input type="button" id="but" class="butconf" value="Cancel">
             </div>
           </div>
       </div>
