--- a/less/signeform.less
+++ b/less/signeform.less
@@ -46,7 +46,7 @@ ul.social-buttons li a {
     line-height: 40px;
     outline: 0;
     color:#fff ;
-    background-color: #d9534f;
+    background-color: #ea556f;
     text-align: center;
     -webkit-transition: all .3s;
     -moz-transition: all .3s;
@@ -56,17 +56,25 @@ ul.social-buttons li a {
 ul.social-buttons li a:hover,
 ul.social-buttons li a:focus,
 ul.social-buttons li a:active {
-    background-color: #c12e2a;
+    background-color: #c84157;
 }
 
-.butconf {    
+.butconf { 
+  background-color: #ea556f;   
   width: 100%;
   height: 30px;
   padding: 6px 12px;
   font-size: 14px;
+  color: white;
   line-height: 1.0; 
   border: 1px solid #ccc;
   border-radius: 0pxt;
+
+}
+.butconf:hover,
+.butconf:focus,
+.butconf:active {
+background-color: #c84157; 
 }
 
 
