--- a/templates/log-in-form.html
+++ b/templates/log-in-form.html
@@ -45,6 +45,7 @@
 
     <script src="../js/libs/jquery/jquery-2.1.4.js"></script>
     <script src="../js/apps/validation.js"></script>
+    <script src="../js/apps/addValid.js"></script>
     <script src="../js/libs/bootstrap/js/bootstrap.min.js"></script>
 	<script src="https://apis.google.com/js/platform.js" async defer></script>
 	<script src="../js/apps/social-networks-buttons.js"></script>
