--- a/templates/signform.html
+++ b/templates/signform.html
@@ -25,7 +25,7 @@
 <body>
   <br>
   <div class="container" >
-    <form class="form-horizontal" role="form">
+    <form class="form-horizontal" id="sign_up_form" role="form">
       <div class="row">
           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12  form-group">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -47,9 +47,9 @@
               </div>
               <br>
               <br>
-              <label class="control-label control-label col-lg-4 col-md-4 col-sm-4 col-xs-4" for="pass">Password</label>
+              <label class="control-label control-label col-lg-4 col-md-4 col-sm-4 col-xs-4" for="password">Password</label>
               <div class="col-lg-8 col-md-8 col-sm-8  col-xs-8">
-                <input type="text" class="res form-control input-sm" id="pass">
+                <input type="text" class="res form-control input-sm" id="password">
               </div>
               <br>
               <br>
@@ -92,7 +92,7 @@
           </div>
           <div class="col-md-12 col-sm-12 col-xs-12">
             <div class="col-xs-5 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-md-4 col-md-offset-1 col-lg-4 col-lg-offset-1 ">
-              <input type="submit" class="butconf" value="Sign Up">
+              <input type="submit" class="butconf" id="signup_btn" value="Sign Up">
             </div>
             <div class="col-xs-5 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-md-4 col-md-offset-1 col-lg-4 col-lg-offset-1 ">
               <input type="button" id="but" class="butconf" value="Cancel">
@@ -101,5 +101,10 @@
       </div>
     </form>
   </div>
+  
+  <script src="../js/libs/jquery/jquery-2.1.4.js"></script>
+  <script src="../js/apps/validation.js"></script>
+  <script src="../js/apps/addValid.js"></script>
+  
 </body>
 
