--- a/less/form.less
+++ b/less/form.less
@@ -1,34 +1,29 @@
 @color-for-border: #489a37;
 
 .form-wrapper {
-    width: 260px;
-    margin-left: 10px;
+    width: 300px;
+    margin-left: 30px;
     font-size: 12px;
-
-    input {
-        width: 180px;
-        float: right;
+	
+	.form-group{
+	  
+	    input {
         margin-left: 5px;
-        padding-left: 5px;
+		border-radius:0;
     }
-
-    label {
+	    label {
         font-size: 12px;
         font-weight: normal;
+		margin-right: 10px;
     }
-
-    input[type=checkbox] {
-        margin-left: -100px;
-    }
-
-    #login_btn {
-        margin-left: 79px;
+	    #login_btn {
         border-radius: 0;
         font-size: 12px;
         border-color: @color-for-border;
+		margin-left: 15px;
     }
-
-    .login-form-bottom {
-        margin-left: 79px;
-    }
+	}
+}
+#login-warn{
+display:inline-block;
 }
