--- a/templates/log-in-form.html
+++ b/templates/log-in-form.html
@@ -12,24 +12,38 @@
 	<link rel="stylesheet" href="../styles/social-networks.css">
     </head>
 <body>
-    <div class="form-wrapper">
+<div class="row">
+    <div class="form-wrapper form-horizontal">
     <form id="login_form" action="#" method="post" accept-encoding="UTF-8">
 	<p>Enter your <strong>email address</strong> and <strong>password</strong>.</p>
-	<div class="form-group">
-	<label for="email">Email</label>
-	<input type="email" id="email" name="email" size="40" placeholder="you@domain.com"/>
+	<div class="form-group form-group-sm">
+	<label for="email" class="col-sm-2  col-xs-2 col-lg-2">Email</label>
+	<div class="col-sm-8 col-xs-8 col-lg-8">
+	<input type="email" id="email" name="email" placeholder="you@domain.com" class="form-control"/>
+	</div>
+	</div>
+	<div class="form-group form-group-sm">
+	<label for="password" class="col-sm-2  col-xs-2 col-lg-2">Password</label>
+	<div class="col-sm-8 col-xs-8 col-lg-8">
+	<input type="password" id="password" name="password"  placeholder="password" class="form-control"/> 
+	</div>
 	</div>
 	<div class="form-group">
-	<label for="password">Password</label>
-	<input type="password" id="password" name="password" size="40"  placeholder="password"/> 
-	</div>
+	<div class="col-sm-8 col-xs-8 col-lg-8 col-sm-offset-2 col-xs-offset-2 col-lg-offset-2">
 	<button id="login_btn" type="submit" class="btn btn-default">Login</button>
+	</div>
+	</div>
+	<div class=" col-sm-8 col-xs-8 col-lg-8 col-sm-offset-2 col-xs-offset-2 col-lg-offset-2">
 	<div class="checkbox">
 	<label><input type="checkbox" name="remember" checked /> Keep me signed in</label>
     </div>
-	<p><a href="#">I forgot my password</a></p>				
+	</div>
+	<div class="col-sm-10 col-xs-10 col-lg-10 col-sm-offset-2 col-xs-offset-2 col-lg-offset-2">
+	<p><a href="#">I forgot my password</a></p>		
+    </div>	
     </form>
-	
+    </div>	
+    </div>
 	<div class="row">
 		<div class="col-xs-6">
 			<div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
@@ -41,7 +55,7 @@
 		</div>
 	</div>
 	
-	</div>
+
 
     <script src="../js/libs/jquery/jquery-2.1.4.js"></script>
     <script src="../js/apps/validation.js"></script>
