Added backbone underscore libs Moved bootstrap.min.css bootstrap.min.js files Changes paths to libs files Changed log-in-form.html scrips order and style for bootstrap Row

--- a/templates/log-in-form.html
+++ b/templates/log-in-form.html
@@ -7,12 +7,12 @@
 	<meta name="google-signin-client_id"
 		content="118922838722-t3n5vbl6hk8tsgqeg1kd4krop0hk42gj.apps.googleusercontent.com">
     <title>Login form</title>
-    <link rel="stylesheet" href="../js/libs/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="../styles/bootstrap.min.css">
     <link rel="stylesheet" href="../styles/form.css">
 	<link rel="stylesheet" href="../styles/social-networks.css">
     </head>
 <body>
-<div class="row">
+    <div class="row">
     <div class="form-wrapper form-horizontal">
     <form id="login_form" action="#" method="post" accept-encoding="UTF-8">
 	<p>Enter your <strong>email address</strong> and <strong>password</strong>.</p>
@@ -55,12 +55,12 @@
 		</div>
 	</div>
 	
-
-
-    <script src="../js/libs/jquery/jquery-2.1.4.js"></script>
+    <script src="../js/libs/jquery/jquery-2.1.4.min.js"></script>
+	<script src="../js/libs/backbone/backbone-min.js"></script>
+	<script src="../js/libs/underscore/underscore-min.js"></script>
     <script src="../js/apps/validation.js"></script>
     <script src="../js/apps/addValid.js"></script>
-    <script src="../js/libs/bootstrap/js/bootstrap.min.js"></script>
+    <script src="../js/libs/bootstrap/bootstrap.min.js"></script>
 	<script src="https://apis.google.com/js/platform.js" async defer></script>
 	<script src="../js/apps/social-networks-buttons.js"></script>
 </body>
