--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,144 @@
+<!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
 	<title>bawl</title>
-	<link rel="stylesheet" type="text/css" href="../styles/styles.css">
-	<script src="../js/libs/jquery/jquery-2.1.4.min.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
-	<script src="../js/libs/gmaps/markerclusterer.js"></script>
-	<script src="../js/main.js"></script>
+	<link rel="stylesheet" type="text/css" href="../styles/styles.css">		
+    <link rel="stylesheet" href="../js/libs/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="../styles/form.css">
+	<link rel="stylesheet" href="../styles/social-networks.css">
+	<link rel="stylesheet" href="../js/libs/bootstrap/css/bootstrap-theme.min.css">
+	<link href="../libs/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+
 </head>
 <body>
 	<header>
 		<div id="main-banner" class="header-elements"><span>bawl</span></div>
 		<div id="cry-out-button" class="header-elements"><span>Cry out</span></div>
 		<div id="about-button" class="header-elements"><span>About</span></div>
-		<div id="login-button" class="header-elements"><span>Login</span></div>		
+		<div id="login-button" class="header-elements" ><span>Login</span></div>		
 	</header>
-	<div id="main-container">
+	<div id="main-container" class="row">
 		<div id="map-canvas"></div>
+		<div id="login-container">
+			<div class="form-wrapper">
+			    <form id="login_form" action="#" method="post" accept-encoding="UTF-8">
+				<p>Enter your <strong>email address</strong> and <strong>password</strong>.</p>
+				<div class="form-group">
+				<label for="email">Email</label>
+				<input type="email" id="email" name="email" size="40" placeholder="you@domain.com"/>
+				</div>
+				<div class="form-group">
+				<label for="password">Password</label>
+				<input type="password" id="password" name="password" size="40"  placeholder="password"/> 
+				</div>
+				<button id="login_btn" type="submit" class="btn btn-default">Login</button>
+				<div class="checkbox">
+				<label><input type="checkbox" name="remember" checked /> Keep me signed in</label>
+			    </div>
+				<p><a href="#">I forgot my password</a></p>				
+			    </form>			
+				<div class="row">
+					<div class="col-xs-6">
+						<div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
+					</div>
+					<div class="col-xs-6 text-center">
+						<div id="fb-root"></div>
+						<div class="fb-login-button" data-max-rows="1" data-size="xlarge"
+							data-show-faces="false" data-auto-logout-link="true"></div>
+					</div>
+				</div>	
+			</div>
+			<p>Don't have account <button type="button" id="sign-up-button" class="btn btn-default">Sign up</button></p>
+		</div>	
+		<div id="sign-up-container">
+			<div class="container" >
+			    <form class="form-horizontal" id="sign_up_form" role="form">
+			      <div class="row">
+			          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12  form-group">
+			            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+			              <label class="control-label col-lg-4 col-md-4 col-sm-4 col-xs-4" for="name">User Name</label>
+			              <div class="col-lg-8 col-md-8 col-sm-8  col-xs-8">
+			                <input type="text" class="res form-control input-sm" id="name">
+			              </div>
+			              <br>
+			              <br>
+			              <label class="control-label col-lg-4 col-md-4 col-sm-4 col-xs-4" for="login">Login</label>
+			              <div class="col-lg-8 col-md-8 col-sm-8  col-xs-8">
+			                <input type="text" class="res form-control input-sm" id="login">
+			              </div>
+			              <br>
+			              <br>
+			              <label class="control-label control-label col-lg-4 col-md-4 col-sm-4 col-xs-4" for="email">E-mail</label>
+			              <div class="col-lg-8 col-md-8 col-sm-8  col-xs-8">
+			                <input type="text" class="res form-control input-sm" id="email">
+			              </div>
+			              <br>
+			              <br>
+			              <label class="control-label control-label col-lg-4 col-md-4 col-sm-4 col-xs-4" for="password">Password</label>
+			              <div class="col-lg-8 col-md-8 col-sm-8  col-xs-8">
+			                <input type="text" class="res form-control input-sm" id="password">
+			              </div>
+			              <br>
+			              <br>
+			              <label class="control-label control-label col-lg-4 col-md-4 col-sm-4 col-xs-4" for="confpass">Confirm password</label>
+			              <div class="col-lg-8 col-md-8 col-sm-8  col-xs-8">
+			                <input type="text" class="res form-control input-sm" id="confpass">
+			              </div>
+			            </div>
+			          </div>
+			          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12  form-group">
+			              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+			                <label class="control-label col-lg-4 col-md-4 col-sm-4 col-xs-4" for="photo">Yours Photo </label>
+			                <div class="image-upload col-lg-8 col-md-8 col-sm-8  col-xs-8 ">
+			                    <label for="imgInp">
+			                      <div id="over">
+			                        <img id="blah" src="../img/anonymus.png"/>
+			                      </div>
+			                     </label>
+			                     <input id="imgInp" type="file" id="photo"/>
+			                </div>
+			              </div>
+			              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="height:14px"></div><!--Use for <br> -->
+			              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+			                <label class="control-label col-lg-4 col-md-4 col-sm-4 col-xs-4" for="photo">Use Social Account </label>
+			                <div class="image-upload col-lg-8 col-md-8 col-sm-8  col-xs-8 ">
+			                  <ul class="list-inline social-buttons">
+			                    <li>
+			                      <a href="#">
+			                        <i class="fa fa-facebook"></i>
+			                      </a>
+			                    </li>
+			                    <li>
+			                      <a href="#">
+			                        <i class="fa fa-google"></i>
+			                      </a>
+			                    </li>
+			                  </ul>
+			                </div>  
+			              </div>   
+			          </div>
+			          <div class="col-md-12 col-sm-12 col-xs-12">
+			            <div class="col-xs-5 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-md-4 col-md-offset-1 col-lg-4 col-lg-offset-1 ">
+			              <input type="submit" class="butconf" id="signup_btn" value="Sign Up">
+			            </div>
+			            <div class="col-xs-5 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-md-4 col-md-offset-1 col-lg-4 col-lg-offset-1 ">
+			              <input type="button" id="but" class="butconf" value="Cancel">
+			            </div>
+			          </div>
+			      </div>
+			    </form>
+  			</div>
+		</div>	
 	</div>
+	<script src="../js/libs/jquery/jquery-2.1.4.min.js"></script>
+    <script src="../js/libs/bootstrap/js/bootstrap.min.js"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
+	<script src="../js/libs/gmaps/markerclusterer.js"></script>	
+	<script src="../js/main.js"></script>
+	<script src="../js/apps/validation.js"></script>
+    <script src="../js/apps/addValid.js"></script>
+	<script src="../js/apps/social-networks-buttons.js">
+	</script><script src="../js/apps/signform.js"></script>
 </body>
 </html>
