--- a/templates/index.html
+++ b/templates/index.html
@@ -21,34 +21,49 @@
 	<div id="main-container" class="row">
 		<div id="map-canvas"></div>
 		<div id="login-container">
-			<div class="form-wrapper">
-			    <form id="login_form" action="#" method="post" accept-encoding="UTF-8">
-				<p>Enter your <strong>email address</strong> and <strong>password</strong>.</p>
-				<div class="form-group">
-				<label for="email">Email</label>
-				<input type="email" id="email" name="email" size="40" placeholder="you@domain.com"/>
-				</div>
-				<div class="form-group">
-				<label for="password">Password</label>
-				<input type="password" id="password" name="password" size="40"  placeholder="password"/> 
-				</div>
-				<button id="login_btn" type="submit" class="btn btn-default">Login</button>
-				<div class="checkbox">
-				<label><input type="checkbox" name="remember" checked /> Keep me signed in</label>
-			    </div>
-				<p><a href="#">I forgot my password</a></p>				
-			    </form>			
-				<div class="row">
-					<div class="col-xs-6">
-						<div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
-					</div>
-					<div class="col-xs-6 text-center">
-						<div id="fb-root"></div>
-						<div class="fb-login-button" data-max-rows="1" data-size="xlarge"
-							data-show-faces="false" data-auto-logout-link="true"></div>
-					</div>
-				</div>	
-			</div>
+    <div class="row">
+    <div class="form-wrapper form-horizontal">
+		<form id="login_form" action="#" method="post" accept-encoding="UTF-8">
+		<p>Enter your <strong>email address</strong> and <strong>password</strong>.</p>
+		<div class="form-group form-group-sm">
+		<label for="email" class="col-sm-2  col-xs-2 col-lg-2">Email</label>
+		<div class="col-sm-8 col-xs-8 col-lg-8">
+		<input type="email" id="email" name="email" placeholder="you@domain.com" class="form-control"/>
+		</div>
+		</div>
+		<div class="form-group form-group-sm">
+		<label for="password" class="col-sm-2  col-xs-2 col-lg-2">Password</label>
+		<div class="col-sm-8 col-xs-8 col-lg-8">
+		<input type="password" id="password" name="password"  placeholder="password" class="form-control"/> 
+		</div>
+		</div>
+		<div class="form-group">
+		<div class="col-sm-8 col-xs-8 col-lg-8 col-sm-offset-2 col-xs-offset-2 col-lg-offset-2">
+		<button id="login_btn" type="submit" class="btn btn-default">Login</button>
+		</div>
+		</div>
+		<div class=" col-sm-8 col-xs-8 col-lg-8 col-sm-offset-2 col-xs-offset-2 col-lg-offset-2">
+		<div class="checkbox">
+		<label><input type="checkbox" name="remember" checked /> Keep me signed in</label>
+		</div>
+		</div>
+		<div class="col-sm-10 col-xs-10 col-lg-10 col-sm-offset-2 col-xs-offset-2 col-lg-offset-2">
+		<p><a href="#">I forgot my password</a></p>		
+		</div>	
+		</form>
+    </div>	
+    </div>		
+	<div class="row">
+		<div class="col-xs-6">
+			<div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
+		</div>
+		 <div class="col-xs-6 text-center">
+			<div id="fb-root"></div>
+			<div class="fb-login-button" data-max-rows="1" data-size="xlarge"
+			data-show-faces="false" data-auto-logout-link="true"></div>
+		</div>
+	</div>	
+			
 			<p>Don't have account <button type="button" id="sign-up-button" class="btn btn-default">Sign up</button></p>
 		</div>	
 		<div id="sign-up-container">
@@ -138,7 +153,7 @@
 	<script src="../js/main.js"></script>
 	<script src="../js/apps/validation.js"></script>
     <script src="../js/apps/addValid.js"></script>
-	<script src="../js/apps/social-networks-buttons.js">
+	<!--<script src="../js/apps/social-networks-buttons.js">-->
 	</script><script src="../js/apps/signform.js"></script>
 </body>
 </html>
