--- a/templates/log-in-form.html
+++ b/templates/log-in-form.html
@@ -51,7 +51,7 @@
 		<div class="col-xs-6 text-center">
 			<div id="fb-root"></div>
 			<div class="fb-login-button" data-max-rows="1" data-size="xlarge"
-				data-show-faces="false" data-auto-logout-link="true"></div>
+				data-show-faces="false" onlogin="fbLogin" data-auto-logout-link="true"></div>
 		</div>
 	</div>
 	
