Type of inpuy changed

--- a/templates/index.html
+++ b/templates/index.html
@@ -77,19 +77,19 @@
 		           
 		              <label class="col-lg-4 col-md-4 col-sm-4 col-xs-4" for="email">E-mail</label>
 		              <div class="col-lg-8 col-md-8 col-sm-8  col-xs-8">
-		                <input type="text" class="res form-control input-sm" id="email">
+		                <input type="email" class="res form-control input-sm" id="email">
 		              </div>
 		              <br>
 		              <br>
 		              <label class=" col-lg-4 col-md-4 col-sm-4 col-xs-4" for="password">Password</label>
 		              <div class="col-lg-8 col-md-8 col-sm-8  col-xs-8">
-		                <input type="text" class="res form-control input-sm" id="password">
+		                <input type="password" class="res form-control input-sm" id="password">
 		              </div>
 		              <br>
 		              <br>
 		              <label class="col-lg-4 col-md-4 col-sm-4 col-xs-4" for="confpass">Confirm password</label>
 		              <div class="col-lg-8 col-md-8 col-sm-8  col-xs-8">
-		                <input type="text" class="res form-control input-sm" id="confpass">
+		                <input type="password" class="res form-control input-sm" id="confpass">
 		              </div>
 		          
 		          </div>
@@ -141,6 +141,6 @@
 	<script src="../js/apps/validation.js"></script>
     <script src="../js/apps/addValid.js"></script>
 	<!--<script src="../js/apps/social-networks-buttons.js">-->
-	</script><script src="../js/apps/signform.js"></script>
+	<script src="../js/apps/signform.js"></script>
 </body>
 </html>
