--- a/templates/index.html
+++ b/templates/index.html
@@ -65,37 +65,38 @@
 			data-show-faces="false" data-auto-logout-link="true"></div>
 		</div>
 	</div>	
-			
 			<p>Don't have account <button type="button" id="sign-up-button" class="btn btn-default">Sign up</button></p>
 		</div>	
 		<div id="sign-up-container">
 		  <div class="container-fluid"  >
 		    <form class="form-horizontal" id="sign_up_form" role="form">
 		      <div class="row">
-		          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12  form-group">
+		          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 		            	<br>
-		           
-		              <label class="col-lg-4 col-md-4 col-sm-4 col-xs-4" for="email">E-mail</label>
-		              <div class="col-lg-8 col-md-8 col-sm-8  col-xs-8">
-		                <input type="email" class="res form-control input-sm" id="email">
-		              </div>
-		              <br>
-		              <br>
+		           <!--Завернути  в form group-->
+		           	  <div class="form-group">	
+		                <label class="col-lg-4 col-md-4 col-sm-4 col-xs-4" for="email">E-mail</label>
+		                <div class="col-lg-8 col-md-8 col-sm-8  col-xs-8">
+		                  <input type="email" class="res form-control input-sm" id="email">
+		                </div>
+		          	  </div>
+		              <div class="form-group">	
 		              <label class=" col-lg-4 col-md-4 col-sm-4 col-xs-4" for="password">Password</label>
 		              <div class="col-lg-8 col-md-8 col-sm-8  col-xs-8">
 		                <input type="password" class="res form-control input-sm" id="password">
 		              </div>
-		              <br>
-		              <br>
+		              </div>
+		              <div class="form-group">
 		              <label class="col-lg-4 col-md-4 col-sm-4 col-xs-4" for="confpass">Confirm password</label>
 		              <div class="col-lg-8 col-md-8 col-sm-8  col-xs-8">
 		                <input type="password" class="res form-control input-sm" id="confpass">
 		              </div>
+		              </div>
 		          
 		          </div>
-		          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12  form-group">
-		             
-		                <label class="col-lg-4 col-md-4 col-sm-4 col-xs-4" for="photo">Yours Photo </label>
+		          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+		            <div class="form-group">
+		                <label class="col-lg-4 col-md-4 col-sm-4 col-xs-4" for="photo">Your Photo </label>
 		                <div class="image-upload col-lg-8 col-md-8 col-sm-8  col-xs-8 ">
 		                    <label for="imgInp">
 		                      <div id="over">
@@ -104,23 +105,22 @@
 		                     </label>
 		                     <input id="imgInp" type="file" id="photo"/>
 		                </div>
-		              
-		              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="height:14px"></div><!--Use for <br> -->
-		             
-		                <label class="col-lg-4 col-md-4 col-sm-4 col-xs-4" for="photo">Use  Social Account </label>
+		            </div>
+		            <div class="form-group">
+		                <label class="col-lg-4 col-md-4 col-sm-4 col-xs-4" for="photo">Use  your Account </label>
 		                <div class="col-lg-8 col-md-8 col-sm-8  col-xs-8 ">
 		                 <ul class="list-inline social-buttons">
 		                    <li>
 		                      <a href="#" class="butconf"><i class="fa fa-facebook"> </i> </a>
 		                    </li>
 		                    <li>
-		                      <a href="#" class="butconf"><i class="fa fa-google"></i>+</a>
-		                      
+		                      <a href="#" class="butconf"><i class="fa fa-google"></i>+</a> 
 		                    </li>
 		                  </ul> 
-		                </div>  
+		                </div> 
+		            </div >
 		          </div>
-		          <div class="col-md-12 col-sm-12 col-xs-12">
+		          <div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12">
 		            <div class="col-xs-5 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-md-4 col-md-offset-1 col-lg-5 col-lg-offset-1 ">
 		              <input type="submit" class="butconf" id="signup_btn" value="Sign Up">
 		            </div>
