--- a/templates/signform.html
+++ b/templates/signform.html
@@ -87,7 +87,11 @@
                     </li>
                   </ul>
                 </div>  
-              </div>   
+              </div> 
+              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 row">
+              <a href="#" class=" btn butconf col-xs-5 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-md-4 col-md-offset-1 col-lg-4 col-lg-offset-1"><i class="fa fa-google"></i>Sign Up with Facebook</a>  
+               <a href="#" class=" btn butconf col-xs-5 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-md-4 col-md-offset-1 col-lg-4 col-lg-offset-1 "><i class="fa fa-google"></i>Sign Up with Googl+</a> 
+               </div>
           </div>
           <div class="col-md-12 col-sm-12 col-xs-12">
             <div class="col-xs-5 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-md-4 col-md-offset-1 col-lg-4 col-lg-offset-1 ">
