i've creaded index3.html, where I've added all our main page styles and scripts.

--- a/public/js/pages/templates/LoginTemplate.html
+++ b/public/js/pages/templates/LoginTemplate.html
@@ -40,6 +40,9 @@
                 data-show-faces="false" data-auto-logout-link="true"></div>
         </div>
     </div>
+    <div class="row">
+    <p>Don't have account <a href="#sing-up" id="sign-up-button" class="btn btn-default">Sign up</a></p>
+    </div>
     <!-- Script for data passing to laravel. I am not sure where to put it. Maybe, I will move it to Controller -->
 <!-- 
     <script type="text/javascript">
