I've changed view, so that it appear on #login link and I've removed onClick event from apps/main.js

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -47,7 +47,6 @@ header {
 #map-canvas {
   height: 100%;
 }
-#login-container,
-#sign-up-container {
-  display: none;
+#sidebar{
+  display:block;
 }
