--- a/public/js/pages/templates/LoginTemplate.html
+++ b/public/js/pages/templates/LoginTemplate.html
@@ -41,7 +41,7 @@
         </div>
     </div>
     <div class="row">
-    <p>Don't have account <a href="#sing-up" id="sign-up-button" class="btn btn-default">Sign up</a></p>
+    <p>Don't have account <a href="#register" id="sign-up-button" class="btn btn-default">Sign up</a></p>
     </div>
     <!-- Script for data passing to laravel. I am not sure where to put it. Maybe, I will move it to Controller -->
 <!-- 
