--- a/public/js/pages/templates/LoginTemplate.html
+++ b/public/js/pages/templates/LoginTemplate.html
@@ -1,6 +1,6 @@
     <div class="row">
     <div class="form-wrapper form-horizontal">
-    <form id="login_form" action="#" method="post" accept-encoding="UTF-8">
+    <form id="login_form" action="/auth/login" accept-encoding="UTF-8">
     <p>Enter your <strong>email address</strong> and <strong>password</strong>.</p>
     <div class="form-group form-group-sm">
     <label for="email" class="col-sm-2  col-xs-2 col-lg-2">Email</label>
@@ -16,7 +16,7 @@
     </div>
     <div class="form-group">
     <div class="col-sm-8 col-xs-8 col-lg-8 col-sm-offset-2 col-xs-offset-2 col-lg-offset-2">
-    <button id="login_btn" type="submit" class="btn btn-default" onclick="logIn();">Login</button>
+    <button id="login_btn" type="submit" class="btn btn-default">Login</button>
     </div>
     </div>
     <div class="col-sm-10 col-xs-10 col-lg-10 col-sm-offset-2 col-xs-offset-2 col-lg-offset-2">
