I've changed styles of Login button link

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12,6 +12,14 @@ header {
   width: 100%;
   text-align: center;
 }
+header a {
+  color: #ffffff;
+  text-decoration: none;
+}
+header a:hover {
+  color: #ffffff;
+  text-decoration: none;
+}
 #main-banner,
 #cry-out-button {
   float: left;
@@ -47,6 +55,6 @@ header {
 #map-canvas {
   height: 100%;
 }
-#sidebar{
-  display:block;
+#sidebar {
+  display: block;
 }
