--- a/public/less/index.less
+++ b/public/less/index.less
@@ -12,6 +12,16 @@ header {
 	width: 100%;
 	text-align: center;
 }
+header {
+	a{
+	color: #ffffff;
+	text-decoration: none;
+}
+	a:hover{
+		color:#ffffff;
+		text-decoration: none;
+	}
+}
 #main-banner, #cry-out-button {
 	float:left;
 	width: 100px;
@@ -41,6 +51,6 @@ header {
 #page, #main-container, #map-canvas {
 	height: 100%;
 }
-#login-container, #sign-up-container{
-	display:none;
+#sidebar{
+  display:block;
 }
