--- a/public/less/index.less
+++ b/public/less/index.less
@@ -21,6 +21,10 @@ header {
 		color:#ffffff;
 		text-decoration: none;
 	}
+	a:visited{
+	color:#ffffff;
+	text-decoration: none;	
+	}
 }
 #main-banner, #cry-out-button {
 	float:left;
@@ -28,7 +32,7 @@ header {
 	height: 80px;	
 	line-height: 70px;
 }
-#about-button, #login-button {
+#about-button, #login-button, #logout-button {
 	float: right;
 	width: 100px;
 	height: 80px;
@@ -38,7 +42,7 @@ header {
 	font-style: italic;
 	background-color:#d5445c
 }
-#about-button:hover, #login-button:hover, #cry-out-button:hover {
+#about-button:hover, #login-button:hover, #cry-out-button:hover, #logout-button:hover {
 	background-color: #e04c65;
 	cursor: pointer;
 	border:1px;
