--- a/public/less/index.less
+++ b/public/less/index.less
@@ -32,7 +32,7 @@ header {
 	height: 80px;	
 	line-height: 70px;
 }
-#about-button, #login-button, #logout-button {
+#about-button, #login-button, #logout-button, #profile{
 	float: right;
 	width: 100px;
 	height: 80px;
@@ -42,7 +42,7 @@ header {
 	font-style: italic;
 	background-color:#d5445c
 }
-#about-button:hover, #login-button:hover, #cry-out-button:hover, #logout-button:hover {
+#about-button:hover, #login-button:hover, #cry-out-button:hover, #logout-button:hover , #profile:hover{
 	background-color: #e04c65;
 	cursor: pointer;
 	border:1px;
