Create new issue form to main page

--- a/public/js/pages/templates/header.html
+++ b/public/js/pages/templates/header.html
@@ -1,5 +1,5 @@
 <div id="main-banner" class="header-elements"><span>bawl</span></div>
-<div id="cry-out-button" class="header-elements"><span>Cry out</span></div>
+<div id="cry-out-button" class="header-elements"><span><a href="#issue">Cry out</a></span></div>
 <div id="about-button" class="header-elements"><span>About</span></div>
 <% if(logged_in){ %>
 <div id="logout-button" class="header-elements" ><span><a href="#" id="logout-btn">Logout</a></span></div> 
