--- a/public/js/pages/templates/header.html
+++ b/public/js/pages/templates/header.html
@@ -3,7 +3,7 @@
 <div id="about-button" class="header-elements"><span>About</span></div>
 <% if(logged_in){ %>
 <div id="logout-button" class="header-elements" ><span><a href="#" id="logout-btn">Logout</a></span></div> 
-<div id="profile" class="header-elements" ><span><a href="#myprofile" id="profile-lnk">Hello, <%=session.get("user").name%></a></span></div>
+<div id="profile" class="header-elements" ><span><a href="#myprofile" id="profile-lnk">Hello, <%=session.get("user").email%></a></span></div>
 <% } else{ %>
 <div id="login-button" class="header-elements" ><span><a href="#login" id="login">Login</a></span></div>
 <% } %>       
