--- a/public/less/form.less
+++ b/public/less/form.less
@@ -3,8 +3,11 @@
 .form-wrapper {
     width: 300px;
     font-size: 12px;
-	
+	p{
+    margin: 0 0 10px 15px;
+    }
 	.form-group{
+       margin-left: 0px;
 	  
 	    input {
         margin-left: 5px;
@@ -30,3 +33,6 @@ display:inline-block;
 margin-right: 0px;
 margin-left: 0px;
 	}
+#sb{
+    padding-left: 0px;
+}    
