--- a/public/less/index.less
+++ b/public/less/index.less
@@ -16,7 +16,7 @@ header {
 	a{
 	color: #ffffff;
 	text-decoration: none;
-}
+	}
 	a:hover{
 		color:#ffffff;
 		text-decoration: none;
@@ -32,11 +32,18 @@ header {
 	height: 80px;	
 	line-height: 70px;
 }
-#about-button, #login-button, #logout-button, #profile{
+#about-button, #login-button, #logout-button{
 	float: right;
 	width: 100px;
 	height: 80px;
 	line-height: 70px;
+}
+#profile{
+float: right;
+max-width:150px;
+height: 80px;
+line-height: 20px;
+padding-top: 15px;
 }
 #main-banner {
 	font-style: italic;
@@ -57,4 +64,7 @@ header {
 }
 #sidebar{
   display:block;
+	p{
+	margin: 0 0 10px 12px;
+	}
 }
