--- a/public/js/pages/templates/SignUpFormTemplate.html
+++ b/public/js/pages/templates/SignUpFormTemplate.html
@@ -1,10 +1,9 @@
  <div class="container-fluid"  >
-<p>Create Your Account</p>
  	<form class="form-horizontal" id="sign_up_form" role="form">
  		<div class="row">
  			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
- 				<br>
  				<!--Завернути  в form group-->
+ 				<h4>Create Your Account:</h4>
  				<div class="form-group">	
  					<label class="col-lg-4 col-md-4 col-sm-4 col-xs-4" for="email">E-mail</label>
  					<div class="col-lg-8 col-md-8 col-sm-8  col-xs-8">
@@ -25,41 +24,44 @@
  				</div>
  				
  			</div>
+ 		</div>
+ 
+ 		<div class="row">
  			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
  				<div class="form-group">
  					<label class="col-lg-4 col-md-4 col-sm-4 col-xs-4" for="photo">Your Photo </label>
- 					<div class="image-upload col-lg-8 col-md-8 col-sm-8  col-xs-8 ">
+ 					<div class="image-upload col-lg-8 col-md-8 col-sm-8 col-xs-8">
  						<label for="imgInp">
  							<div id="over">
- 								<img id="blah" src="img/anonymus.png"/>
+ 								<img id="blah" src="img/anonymus.png" class="img-thumbnail">
  							</div>
  						</label>
  						<input  type="file" id="imgInp"/>
  					</div>
  				</div>
- 				<div class="form-group">
- 					<label class="col-lg-4 col-md-4 col-sm-4 col-xs-4" for="photo">Use  your Account </label>
- 					<div class="col-lg-8 col-md-8 col-sm-8  col-xs-8 ">
- 						<ul class="list-inline social-buttons">
- 							<li>
- 								<a href="#" class="butconf"><i class="fa fa-facebook"> </i> </a>
- 							</li>
- 							<li>
- 								<a href="#" class="butconf"><i class="fa fa-google"></i>+</a> 
- 							</li>
- 						</ul> 
- 					</div> 
- 				</div >
- 			</div>
- 			<div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12">
- 				<div class="col-xs-5 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-md-4 col-md-offset-1 col-lg-5 col-lg-offset-1 ">
- 					<input type="submit" class="butconf" id="signup_btn" value="Sign Up">
- 				</div>
- 				<div class="col-xs-5 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-md-4 col-md-offset-1 col-lg-5 col-lg-offset-1 ">
- 					<input type="button" id="but" class="butconf" value="Cancel">
- 				</div>
  			</div>
  		</div>
+
+ 		<div class="row">
+ 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+ 					<input type="submit" class="btn btn-default btn-sm btn-block" id="signup_btn" value="Sign Up">
+ 			</div>
+ 		</div>
+ 		
+ 		<br />
+
+ 			<div class="row">
+ 				<div class="col-sm-12">
+ 					<h4>Use your Account:</h4>
+ 				</div>
+ 				<div class="col-sm-12">
+ 					<a class="btn btn-primary btn-sm btn-block" href="#" role="button"><i class="fa fa-facebook"></i> Sign up with Facebook</a>
+ 				</div>
+ 				<div class="col-sm-12">
+ 					<a class="btn btn-info btn-sm btn-block" href="#" role="button"><i class="fa fa-google"></i>+ Sign up with Google</a>
+ 				</div>
+ 			</div>
+ 				
+
  	</form>
  </div>
-</div>
