I've changed styles for login page changed urls from index3 added response code for login

--- a/public/js/pages/templates/LoginTemplate.html
+++ b/public/js/pages/templates/LoginTemplate.html
@@ -35,6 +35,20 @@
                 data-show-faces="false" data-auto-logout-link="true"></div>
         </div>
     </div>
+    <br />
+
+    <div class="row">
+        <div class="col-sm-12">
+            <h4>Use your Account:</h4>
+        </div>
+        <div class="col-sm-12">
+            <a class="btn btn-primary btn-sm btn-block" href="#" role="button"><i class="fa fa-facebook"></i> Sign up with Facebook</a>
+        </div>
+        <div class="col-sm-12">
+            <a class="btn btn-info btn-sm btn-block" href="#" role="button"><i class="fa fa-google"></i>+ Sign up with Google</a>
+        </div>
+    </div>
+     <br />
     <div class="row">
     <p>Don't have account <a href="#register" id="sign-up-button" class="btn btn-default">Sign up</a></p>
     </div>
