--- a/public/less/index.less
+++ b/public/less/index.less
@@ -40,10 +40,11 @@ header {
 }
 #profile{
 float: right;
-max-width:150px;
+min-width:25%;
 height: 80px;
 line-height: 20px;
 padding-top: 15px;
+font-size:11px;
 }
 #main-banner {
 	font-style: italic;
