--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -41,10 +41,11 @@ header a:visited {
 }
 #profile {
   float: right;
-  max-width: 150px;
+  min-width: 25%;
   height: 80px;
   line-height: 20px;
   padding-top: 15px;
+  font-size: 11px;
 }
 #main-banner {
   font-style: italic;
@@ -76,36 +77,35 @@ header a:visited {
   margin: 0 0 10px 12px;
 }
 .center-pills {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
-
-.center-pills li{
-    width: 33%;
+.center-pills li {
+  width: 33%;
 }
-
 .form-group {
   margin-left: 10px;
   margin-top: 10px;
   padding-left: 5%;
 }
-.form-group label{
+.form-group label {
   font-weight: bold;
 }
-.form-group input{
-  width:95%;
+.form-group input {
+  width: 95%;
 }
-#photo p{
+#photo p {
   margin-left: 5%;
   margin-top: 20px;
   border: 1px dashed grey;
   padding: 3px;
   width: 90%;
 }
-#point p{
+#point p {
   margin-left: 5%;
   margin-top: 10px;
 }
-#point button, #photo button{
+#point button,
+#photo button {
   margin-left: 5%;
 }
