--- a/public/less/form.less
+++ b/public/less/form.less
@@ -1,7 +1,7 @@
 @color-for-border: #489a37;
 
 .form-wrapper {
-    width: 300px;
+    max-width: 300px;
     font-size: 12px;
 	p{
     margin: 0 0 10px 15px;
