changed cliend side issue adding method with getting map coordinates

--- a/public/js/pages/templates/CryOutTemplate.html
+++ b/public/js/pages/templates/CryOutTemplate.html
@@ -36,7 +36,7 @@
       <input type="text" id="issue-description" class="form-control">
       </div>
       <div class="form-group">
-      <button>Далі</button>
+      <button id="AddIssueButton">Далі</button>
       </div>
     </div>
 
