--- a/public/js/pages/templates/ManagerTemplate.html
+++ b/public/js/pages/templates/ManagerTemplate.html
@@ -1,21 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>bawl</title>      
-    <link rel="stylesheet" href="css/bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="css/form.css">
-    <link rel="stylesheet" href="css/social-networks.css">
-    <link rel="stylesheet" href="css/signform.css">
-    <link rel="stylesheet" href="css/bootstrap/css/bootstrap-theme.min.css">
-    <link href="css/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="css/styles.css"> 
-
-</head>
-<body>
-    <header>
-       
-    </header>
     <div id="main-container" class="row">
         <div class="left-sidebar col-lg-3 col-md-3 col-sm-3 col-xs-3" >
         <div class="profile row"> 
@@ -23,8 +5,8 @@
         <img src="img/sample-img.jpg" alt="avatar"> 
         </div>
         <div class="profile-info col-lg-9 col-md-8 col-sm-9 col-xs-9">
-        <p>Peter Hudson</p>
-        <button type="submit" id="logout-btn">Logout</button>
+        <p><%=user.email%></p>
+        <button type="submit" id="small-logout-btn">Logout</button>
         </div>
         </div>
          <ul>
@@ -89,9 +71,3 @@
         </div>
         </div>
     </div>
-     <script  data-main="js/main.js" src="js/libs/requirejs/require-full.js"></script>
-<!-- I am not sure how to add scripts to index file, while we use RequreJS. Let's discuss, how to do this right. I've uploaded them on previous way -->     
-    <script src="js/libs/jquery/jquery-2.1.4.js"></script>
-    <script src="js/libs/bootstrap/bootstrap.min.js"></script>
-</body>
-</html>
