--- a/public/js/pages/templates/SimpleMessage.html
+++ b/public/js/pages/templates/SimpleMessage.html
@@ -1,7 +1,11 @@
  <div class="container-fluid">
-	<div class="row">
-		<div class="col-xs-12">
-			<h4><%= message %></h4>
+	<div class="row" style="font-size:16">
+		<div class="alert-success col-xs-12">Success
 		</div>
 	</div>
+    <div class="row">
+        <div class="col-xs-12">
+            <h4><%= message %></h4>
+        </div>
+    </div>
 </div>
