I've added avatar upload and checking user role  for ManagerView

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -118,6 +118,9 @@ header a:visited {
   margin: 10px 0 30px 0;
   min-height: 70px;
 }
+.left-sidebar .avatar img {
+  height: 70px;
+}
 .left-sidebar p {
   margin: 0px;
   padding: 0px;
