--- a/public/less/index.less
+++ b/public/less/index.less
@@ -113,7 +113,9 @@ font-size:11px;
         min-height: 70px;
     }
     .avatar{
-
+    img{
+      height:70px;
+    }
     }
     p{
         margin:0px;
