--- a/public/js/pages/templates/ManagerTemplate.html
+++ b/public/js/pages/templates/ManagerTemplate.html
@@ -2,7 +2,7 @@
         <div class="left-sidebar col-lg-3 col-md-3 col-sm-3 col-xs-3" >
         <div class="profile row"> 
         <div class="avatar col-lg-3 col-md-4 col-sm-12 col-xs-12">   
-        <img src="img/sample-img.jpg" alt="avatar"> 
+        <img src="<%=user.avatar_url%>" alt="avatar"> 
         </div>
         <div class="profile-info col-lg-9 col-md-8 col-sm-9 col-xs-9">
         <p><%=user.email%></p>
