--- a/public/js/pages/templates/ManagerTemplate.html
+++ b/public/js/pages/templates/ManagerTemplate.html
@@ -1,5 +1,5 @@
     <div id="main-container" class="row">
-        <div class="col-lg-3 col-md-3" id="left-sidebar">
+        <div class="col-lg-3 col-md-3 sidebar-mobile" id="left-sidebar">
         <div class="profile row"> 
         <div class="avatar col-lg-3 col-md-4 col-sm-12 col-xs-12"> 
         <img src="<%if(user.avatar_url){%><%=user.avatar_url%><%}else{%>img/anonymus.png<%}%>" alt="avatar"> 
