--- a/public/less/index.less
+++ b/public/less/index.less
@@ -6,61 +6,70 @@ html, body {
 	margin: 0;
 }
 header {
-	height: 80px;
+	min-height: 80px;
 	color: white;
 	background-color: @header-background-color;
 	font-size: 24;
 	width: 100%;
 	text-align: center;
+  a:link{
+  color: #ffffff;
+  text-decoration: none;
+  }
+  a:visited{
+  color:#ffffff;
+  text-decoration: none;  
+  }
+  a:hover{
+    color:#ffffff;
+    text-decoration: none;
+  }
+  a:active{
+  color:#ffffff;
+  text-decoration: none;     
+  }
+  ul{
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
+  }
+  ul li{
+  display: inline;
+  float:left;
+  width:100px;
+  line-height: 80px;
+  }
+  ul li:hover{
+  background-color: #e04c65;
+  cursor: pointer;
+  border:1px;
+  }
+  #login-button, #logout-button, #about-button{
+  float: right;
+  margin-right: 20px;
 }
-header {
-	a{
-	color: #ffffff;
-	text-decoration: none;
-	}
-	a:hover{
-		color:#ffffff;
-		text-decoration: none;
-	}
-	a:visited{
-	color:#ffffff;
-	text-decoration: none;	
-	}
+
+  #profile{
+  float: right;
+  min-width:200px;
+  line-height: 40px;
+  }
+  #main-banner {
+    font-style: italic;
+    background-color:#d5445c;
+  }
+  #main-banner:hover {
+    background-color: #c84157;
+  }
 }
-#main-banner, #cry-out-button {
-	float:left;
-	width: 100px;
-	height: 80px;	
-	line-height: 70px;
+
+.map-canvas-with-sb{
+  width:70%;
 }
-#about-button, #login-button, #logout-button{
-	float: right;
-	width: 100px;
-	height: 80px;
-	line-height: 70px;
+.sb-show{
+  width: 30%;
 }
-#profile{
-float: right;
-min-width:25%;
-height: 80px;
-line-height: 20px;
-padding-top: 15px;
-font-size:11px;
-}
-#main-banner {
-	font-style: italic;
-	background-color:#d5445c
-}
-#about-button:hover, #login-button:hover, #cry-out-button:hover, #logout-button:hover , #profile:hover{
-	background-color: #e04c65;
-	cursor: pointer;
-	border:1px;
-}
-#main-banner:hover {
-	background-color: #c84157;
-	cursor: pointer;
-	border:1px;
-}
+
 #page, #main-container, #map-canvas {
 	height: 100%;
 }
@@ -108,7 +117,7 @@ font-size:11px;
 #left-sidebar{
     background-color: @left-sidebar-background;
     height: 100%;
-    display:block;
+    /*display:block;*/
     .profile{
         margin: 10px 0 30px 0;
         min-height: 70px;
@@ -123,7 +132,6 @@ font-size:11px;
         padding:0px;
         font-size: 12px;
         font-weight: bold;
-        overflow: hidden;
     }
     button{
        border-color: @header-background-color;
@@ -194,12 +202,29 @@ font-size:11px;
       color: #63978c;
     }
 }
+
 @media screen and (max-width: 990px){
   #manager-panel .fa-align-justify{
     display:block;
   }
-  #left-sidebar{
+  .sidebar-mobile{
+    display: none;
+  }
+  header{
+    ul li{
+  display: block;
+  float:none;
+  width:100%;
+  line-height: 40px;
+    }
+  #login-button, #logout-button, #about-button{
+    margin: 0px;
+    float: none;
+  }  
+  }
+  /*#left-sidebar{
     display:none;
   }
+  */
 }
 /*End of manager page styles */
