I've created Search controller and wrote method for searching.

--- a/public/js/pages/templates/ManagerTemplate.html
+++ b/public/js/pages/templates/ManagerTemplate.html
@@ -19,7 +19,7 @@
         </div>
         <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12" id="manager-panel">
         <span class="fa fa-align-justify" id="left-sidebar-btn"></span>
-        <form action="/search" class="search-form">
+        <form  id="search-form" action="/issue/search">
             <div class="form-group">
             <input type="text" class="form-control" placeholder="Search..." name="search">
             <button type="submit" id="search-btn">Search</button>
