--- a/public/js/pages/templates/header.html
+++ b/public/js/pages/templates/header.html
@@ -6,7 +6,7 @@
     <a href="#" id="logout-btn"><li id="logout-button"><div id="logout-button" class="header-elements">Logout</li></a>
     <a href="#myprofile" id="profile-lnk"><li id="profile">Hello,</br> <%=user.email%></li>
     <% } else{ %>
-    <li id="login-button"><a href="#login" id="login">Login</li></a>
+    <li id="login-button"><a href="#login" id="login-link">Login</li></a>
     <% } %> 
 </ul>
 <div class="clearfix"></div>
