--- a/public/less/index.less
+++ b/public/less/index.less
@@ -210,6 +210,9 @@ header {
   .sidebar-mobile{
     display: none;
   }
+  .width50{
+    width:50%;
+  }
   header{
     ul li{
   display: block;
